wachswork/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wachswork
  namespace: wachswork
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  type: ClusterIP
  selector:
    app: wachswork
