wachswork/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wachswork
  namespace: wachswork
  annotations:
    acme.cert-manager.io/http01-edit-in-place: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    ingress.kubernetes.io/force-ssl-redirect: "true"
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/limit-rps: "10"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - wachs.work
        - www.wachs.work
      secretName: wachswork-cert-prod
  rules:
    - host: wachs.work
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wachswork
                port:
                  number: 80
    - host: www.wachs.work
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wachswork
                port:
                  number: 80
